fix: update GitHub Pages with correct download links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="YouTube Vanced Plugin for Chrome">
   <meta property="og:description" content="Enhanced YouTube experience with advanced Shorts control, modern UI, and smart content filtering">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://raw.githubusercontent.com/USERNAME/REPO/main/icon.svg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/B143KC47/Vanced_Youtube_Plugin/main/icon.svg">
   
   <style>
     /* Modern Dark Theme Styles */
@@ -403,10 +403,10 @@
       </p>
       
       <div class="btn-group">
-        <a href="https://github.com/USERNAME/REPO/archive/refs/heads/main.zip" class="btn btn-primary" target="_blank">
+        <a href="https://github.com/B143KC47/Vanced_Youtube_Plugin/archive/refs/heads/main.zip" class="btn btn-primary" target="_blank">
           📦 Download Extension<br><small>下载扩展</small>
         </a>
-        <a href="https://github.com/USERNAME/REPO" class="btn btn-secondary" target="_blank">
+        <a href="https://github.com/B143KC47/Vanced_Youtube_Plugin" class="btn btn-secondary" target="_blank">
           📋 View Source<br><small>查看源码</small>
         </a>
       </div>
@@ -494,9 +494,9 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-links">
-      <a href="https://github.com/USERNAME/REPO" class="footer-link">Source Code 源码仓库</a>
-      <a href="https://github.com/USERNAME/REPO/issues" class="footer-link">Issues 问题反馈</a>
-      <a href="https://github.com/USERNAME/REPO/releases" class="footer-link">Releases 版本发布</a>
+      <a href="https://github.com/B143KC47/Vanced_Youtube_Plugin" class="footer-link">Source Code 源码仓库</a>
+      <a href="https://github.com/B143KC47/Vanced_Youtube_Plugin/issues" class="footer-link">Issues 问题反馈</a>
+      <a href="https://github.com/B143KC47/Vanced_Youtube_Plugin/releases" class="footer-link">Releases 版本发布</a>
     </div>
     <p class="footer-text">
       v2.0 — MIT License · 2025<br>
